force-app/main/default/objects/Route__c/fields/Route_Description__c.field-meta.xml
<CustomField>
    <fullName>Route_Description__c</fullName>
    <label>Route Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>