force-app/main/default/objects/Route__c/fields/Route_Optimization_Data__c.field-meta.xml
<CustomField>
    <fullName>Route_Optimization_Data__c</fullName>
    <label>Route Optimization Data</label>
    <type>TextArea</type>
</CustomField>