force-app/main/default/objects/Route__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stop</label>
    <referenceTo>Stop__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>